# Web-Balancer

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_server.sh  run_tests.sh
.github/workflows/: ci.yml
include/: LoadBalancer.hpp  Logger.hpp  Server.hpp  ThreadPool.hpp
scripts/: build.sh  run_server.sh  run_tests.sh
src/: LoadBalancer.cpp  Server.cpp  ThreadPool.cpp  main.cpp
tests/: CMakeLists.txt
tests/include/: tests_common.hpp
tests/src/: loadBalancerTests.cpp  serverTests.cpp  test_main.cpp  tests_common.cpp
